package LabOne;

public class ATMTest {
	public static void main(String[] args) {
		ATMSimulator atm = new ATMSimulator();

	}
}
