package LabOne;

public class AtmException extends Exception {
    public AtmException(String message) {
        super(message);
    }

}
